--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
 	},
 	"devDependencies": {
 		"jshint": "^2.9.4",
-		"qunitjs": "^2.4.1",
-		"qunit-phantomjs-runner": "^2.3.1"
+		"qunit-phantomjs-runner": "^2.3.1",
+		"qunitjs": "^2.4.1"
 	},
 	"dependencies": {
 		"brunch": "^2.10.17",
 		"gzip-brunch": "^1.3.0",
+		"imagemin-brunch": "^1.1.0",
 		"jshint-brunch": "^2.0.0",
 		"terser-brunch": "^3.0.0"
 	}
